--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <!-- Barra de navegación -->
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
         <ul>
             <li><a href="#info">Información Personal</a></li>
             <li><a href="#experience">Experiencia Laboral</a></li>
@@ -17,6 +17,7 @@
             <li><a href="#skills">Habilidades</a></li>
             <li><a href="#projects">Proyectos</a></li>
             <li><a href="#contact">Contacto</a></li>
+            <li><button class="toggle-darkmode-btn" onclick="toggleDarkMode()">Cambiar Modo</button></li>
         </ul>
     </nav>
     
