--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
         <div class="card" id="info">
             <section class="info">
                 <h2>Información Personal</h2>
-                <p>Soy un Estudiante del programa Ingeniería de Sistemas de la Universidad EAN quien actualmente se encuentra cursando el 7mo Semestre. Mis intereses académicos se centran en 
-                    el aprendizaje de herramientas de desarrollo, así como los procesos necesarios para la documentación de diferentes proyectos enfocados en soluciones tecnológicas para 
-                    necesidades empresariales.
+                <p>Soy un Estudiante del programa Ingeniería de Sistemas de la Universidad EAN. Mis intereses académicos se centran en el aprendizaje de herramientas de 
+                    desarrollo, así como los procesos necesarios para la documentación de diferentes proyectos enfocados en soluciones tecnológicas para necesidades empresariales.
+                    <br><br>
+                    Algunos datos relevantes son:
                 </p>
+                <ul>
+                    <li><b>Semestre:</b> 7mo semestre</li>
+                    <li><b>Edad:</b> 26 años</li>
+                    <li><b>Localidad Residencia:</b> San Cristobal</li>
+                </ul>
             </section>
         </div>
 
@@ -41,6 +47,42 @@
                 <p>Cuento con experiencia en sectores públicos y privados, generalmente en enfoques de soporte y documentación de aplicativos, tanto en la ejecución como en la proyección y el 
                     desarrollo de nuevos sistemas de información. A continuación se relaciona cada experiencia laboral:
                 </p>
+                <div class="exp-list">
+                    <table>
+                        <tr>
+                            <td><img src="media/Logo_MEN.PNG" alt=""></td>
+                            <td>
+                                <h3>Ministerio de Educación Nacional</h3>
+                                <h5><b>Rol:</b> Líder Funcional Aplicativo</h5>
+                                <h5><b>Fecha:</b> 2021 - Actualidad</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><img src="media/Logo_IndustriasHD.PNG" alt=""></td>
+                            <td>
+                                <h3>Industrias HD</h3>
+                                <h5><b>Rol:</b> Practicante SENA</h5>
+                                <h5><b>Fecha:</b> 2016</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><img src="media/Logo_Getel.PNG" alt=""></td>
+                            <td>
+                                <h3>Getel SAS</h3>
+                                <h5><b>Rol:</b> Practicante SENA</h5>
+                                <h5><b>Fecha:</b> 2016</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><img src="media/Logo_Intermarketing.PNG" alt=""></td>
+                            <td>
+                                <h3>Intermarketing Direct</h3>
+                                <h5><b>Rol:</b> Practicante SENA</h5>
+                                <h5><b>Fecha:</b> 2016</h5>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </section>
          </div>
         
