--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <td>
                                 <h3>Industrias HD</h3>
                                 <h5><b>Rol:</b> Practicante SENA</h5>
-                                <h5><b>Fecha:</b> 2016</h5>
+                                <h5><b>Fecha:</b> 2020</h5>
                             </td>
                         </tr>
                         <tr>
@@ -70,7 +70,7 @@
                             <td>
                                 <h3>Getel SAS</h3>
                                 <h5><b>Rol:</b> Practicante SENA</h5>
-                                <h5><b>Fecha:</b> 2016</h5>
+                                <h5><b>Fecha:</b> 2018 - 2019</h5>
                             </td>
                         </tr>
                         <tr>
@@ -78,7 +78,7 @@
                             <td>
                                 <h3>Intermarketing Direct</h3>
                                 <h5><b>Rol:</b> Practicante SENA</h5>
-                                <h5><b>Fecha:</b> 2016</h5>
+                                <h5><b>Fecha:</b> 2016 - 2017</h5>
                             </td>
                         </tr>
                     </table>
@@ -90,11 +90,46 @@
         <!-- Educación Formal y No Formal -->
          <div class="card" id="education">
             <section class="education">
-                <h2>Educación Formal y No Formal</h2>
+                <h2>Educación</h2>
                 <p>Siempre me ha interesado adquirir nuevos conocimientos que me permitan crecer personal y profesionalmente, por lo cual poseo los siguientes estudios formales y cursos:</p>
+                <div class="edu-list">
+                    <table>
+                        <tr>
+                            <td><img src="media/Logo_EAN.PNG" alt=""></td>
+                            <td>
+                                <h3>Ingeniero de Sistemas</h3>
+                                <h5><b>Estado:</b> Cursando</h5>
+                                <h5><b>Semestre Actual:</b> 7mo Semestre</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><img src="media/Logo_SENA.png" alt=""></td>
+                            <td>
+                                <h3>Tecnólogo en Análisis y Desarrollo de Sistemas</h3>
+                                <h5><b>Estado:</b> Finalizado</h5>
+                                <h5><b>Fecha de grado:</b> 2020</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><img src="media/Logo_SENA.png" alt=""></td>
+                            <td>
+                                <h3>Técnico en Desarrollo Web</h3>
+                                <h5><b>Estado:</b> Finalizado</h5>
+                                <h5><b>Fecha de grado:</b> 2017</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><img src="media/Logo_South_Korea.PNG" alt=""></td>
+                            <td>
+                                <h3>Web Programming (Korean Course)</h3>
+                                <h5><b>Estado:</b> Finalizado</h5>
+                                <h5><b>Fecha de grado:</b> 2019</h5>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </section>
          </div>
-        
 
         <!-- Habilidades -->
          <div class="card" id="skills">
