--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#info">Información Personal</a></li>
             <li><a href="#experience">Experiencia Laboral</a></li>
-            <li><a href="#education">Educación Formal y No Formal</a></li>
+            <li><a href="#education">Educación</a></li>
             <li><a href="#skills">Habilidades</a></li>
             <li><a href="#projects">Proyectos</a></li>
             <li><a href="#contact">Contacto</a></li>
@@ -136,6 +136,12 @@
             <section class="skills">
                 <h2>Habilidades</h2>
                 <p>Para complementar lo expuesto en el módulo de educación, acá se relacionan mis principales habilidades y características transversales</p>
+                <div class="skills-list">
+                    <div class="circular-progress">
+                        <span class="progress-value">0%</span>
+                    </div>
+                    <span class="text">HTML</span>
+                </div>
             </section>
          </div>
         
