--- a/index.html
+++ b/index.html
@@ -137,10 +137,24 @@
                 <h2>Habilidades</h2>
                 <p>Para complementar lo expuesto en el módulo de educación, acá se relacionan mis principales habilidades y características transversales</p>
                 <div class="skills-list">
-                    <div class="circular-progress">
-                        <span class="progress-value">0%</span>
+                    <div class="html">
+                        <div class="circular-progress-html">
+                            <span class="progress-value-html">0%</span>
+                        </div>
+                        <span class="text">HTML</span>
                     </div>
-                    <span class="text">HTML</span>
+                    <div class="css">
+                        <div class="circular-progress-css">
+                            <span class="progress-value-css">0%</span>
+                        </div>
+                        <span class="text">CSS</span>
+                    </div>
+                    <div class="js">
+                        <div class="circular-progress-js">
+                            <span class="progress-value-js">0%</span>
+                        </div>
+                        <span class="text">JavaScript</span>
+                    </div>
                 </div>
             </section>
          </div>
@@ -160,8 +174,7 @@
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/nicol%C3%A1s-esteban-garnica-herrera-5878aa165/"><img src="media/instagram.webp" alt=""></a> <!-- LinkedIn -->
             <a href="#"><img src="media/facebook.webp" alt=""></a> <!-- GitHub -->
-            <a href="#"><img src="media/arroba.png" alt=""></a> <!-- Email -->
-            
+            <a href="mailto:ngarnic03766@universidadean.edu.co"><img src="media/arroba.png" alt=""></a> <!-- Email -->            
         </div>
         <div class="copyright">&copy;Copyright. Todos los derechos reservados.</div>
     </footer>
