--- a/index.html
+++ b/index.html
@@ -164,7 +164,14 @@
          <div class="card" id="projects">
             <section class="projects">
                 <h2>Proyectos</h2>
-                <p>Aunque no poseo mucha experiencia en desarrollos, a continuación relaciono lkos proyectos de los cuales he hecho parte, y mi rol dentro de los mismos.</p>
+                <p>Aunque no poseo mucha experiencia en desarrollos, a continuación relaciono los proyectos de los cuales he hecho parte, y mi rol dentro de los mismos.</p>
+                <ul>
+                    <li>Proyecto de un aplicativo de asistencia para el SENA, como rol de <b>Desarrollador</b>.</li>
+                    <li>Proyecto Aplicativo Sistema Maestro como <b>Líder Funcional</b>.</li>
+                    <li>Proyecto Aplicativo de Encargos Docentes como <b>Analista de Requerimientos</b>.</li>
+                    <li>Proyecto Aplicativo de Encargos Administrativos de la Secretaría de Educación de Bogotá como <b>Analista de Requerimientos</b>.</li>
+                    <li>Proyecto Aplicativo de Provision de Docentes como <b>Analista de Requerimientos</b>.</li>
+                </ul>
             </section>
          </div>
     </div>
